fix/ design of calendar page on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -321,6 +321,11 @@ canvas {
 }
 
 // Calendar CSS overrides for mobile
+
+.fc .fc-toolbar.fc-header-toolbar {
+  @apply grid grid-cols-2 sm:flex sm:flex-row sm:items-center sm:justify-between gap-4 sm:gap-2;
+}
+
 .fc .fc-header-toolbar .fc-toolbar-title {
   @apply text-2xl md:text-3xl;
 }
